--- a/xss/production/test/3js_class_test_1.html
+++ b/xss/production/test/3js_class_test_1.html
@@ -190,7 +190,7 @@ camera_1.manager = manager;
 application.i = 0;
 }
 var plane_1 = 
-create_my_plane(200, 260, null, null)
+create_my_plane(200, 260, 1, 1)
 ;
 plane_1.image_set(application.img_array[application.i]);
 plane_1.position.x = x;
