--- a/xss/production/test/box2dcar.html
+++ b/xss/production/test/box2dcar.html
@@ -539,7 +539,7 @@ application.steer_speed = 1;
 }
 	}
 	);
-	application.events.addListener("updates", function()
+	application.events.addListener("update", function()
 	{    
 		application.update_car();
 	}
