--- a/xss/production/test/dd.html
+++ b/xss/production/test/dd.html
@@ -957,55 +957,55 @@ g_sequence_manager);
             image_group.shrink = shrink;
 			 var img1;
 			img1 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img1 instanceof THREE.Object3D)
 					image_group.add(img1);
 			 var img2;
 			img2 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img2 instanceof THREE.Object3D)
 					image_group.add(img2);
 			 var img3;
 			img3 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img3 instanceof THREE.Object3D)
 					image_group.add(img3);
 			 var img4;
 			img4 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img4 instanceof THREE.Object3D)
 					image_group.add(img4);
 			 var img5;
 			img5 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img5 instanceof THREE.Object3D)
 					image_group.add(img5);
 			 var img6;
 			img6 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img6 instanceof THREE.Object3D)
 					image_group.add(img6);
 			 var img7;
 			img7 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img7 instanceof THREE.Object3D)
 					image_group.add(img7);
 			 var img8;
 			img8 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img8 instanceof THREE.Object3D)
 					image_group.add(img8);
 			 var img9;
 			img9 = 
-create_image_plane(100, 100, null, null)
+create_image_plane(100, 100, 1, 1)
  ;
 				if(img9 instanceof THREE.Object3D)
 					image_group.add(img9);
