--- a/xss/production/test/uibuffer_test.html
+++ b/xss/production/test/uibuffer_test.html
@@ -326,7 +326,7 @@ camera_1.manager = manager;
 	    manager.scene.add(cube_1);
 		cube_1.events = new ev.EventHolder();
 cube_1.manager = manager;
-	    plane_1_plane = new THREE.PlaneGeometry(200, 200, null, null) ;
+	    plane_1_plane = new THREE.PlaneGeometry(200, 200, 1, 1) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    manager.scene.add(plane_1);
 		plane_1.events = new ev.EventHolder();
