--- a/xss/production/test/wgl_icosahedron.html
+++ b/xss/production/test/wgl_icosahedron.html
@@ -116,17 +116,17 @@ icosahedron_2.manager = manager;
 	    manager.scene.add(icosahedron_3);
 		icosahedron_3.events = new ev.EventHolder();
 icosahedron_3.manager = manager;
-	    plane_1_plane = new THREE.PlaneGeometry(300, 300, null, null) ;
+	    plane_1_plane = new THREE.PlaneGeometry(300, 300, 1, 1) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, shadow_mat);
 	    manager.scene.add(plane_1);
 		plane_1.events = new ev.EventHolder();
 plane_1.manager = manager;
-	    plane_2_plane = new THREE.PlaneGeometry(300, 300, null, null) ;
+	    plane_2_plane = new THREE.PlaneGeometry(300, 300, 1, 1) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, shadow_mat);
 	    manager.scene.add(plane_2);
 		plane_2.events = new ev.EventHolder();
 plane_2.manager = manager;
-	    plane_3_plane = new THREE.PlaneGeometry(300, 300, null, null) ;
+	    plane_3_plane = new THREE.PlaneGeometry(300, 300, 1, 1) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, shadow_mat);
 	    manager.scene.add(plane_3);
 		plane_3.events = new ev.EventHolder();
