--- a/xss/production/test/dd.html
+++ b/xss/production/test/dd.html
@@ -775,7 +775,7 @@ g_sequence_manager);
 	image_plane.set_image = function(value) 
 	{
 		image_plane.image = value;
-image_plane.material.map = new THREE.Texture(manager.streamer.get_resource(value).data);
+set_3js_object_texture(image_plane, value);
 	};
 	image_plane.switch_images = function() 
 	{
@@ -1198,7 +1198,7 @@ manager.events.addListener("update", function(g_delta, g_elapsed)
 	application.events.dispatch("update", [g_delta, g_elapsed]);
 });
 application.events.dispatch("init", []);
-document.body.appendChild( renderer.domElement );
+		document.body.appendChild( renderer.domElement );
 animate();
 });
 function animate() {
