--- a/xss/production/test/jsmanip.html
+++ b/xss/production/test/jsmanip.html
@@ -165,13 +165,13 @@ plane2.manager = manager;
 		streamer.get_resource('image0').filters.push(streamer.get_resource('image0').rgb1);
 			obtain_images(streamer.get_resource('image0').rgb1, streamer.get_resource('image0'));
 			streamer.get_resource('image0').rgb1.set_render_on_apply(true);
-			material1.blur1 = new jsmanip.Noise(
+			material1.noise1 = new jsmanip.Noise(
 		25,1,false,material1);		
 		if(!material1.filters)
 			material1.filters = [];
-		material1.filters.push(material1.blur1);
-			obtain_images(material1.blur1, material1);
-			material1.blur1.set_render_on_apply(true);
+		material1.filters.push(material1.noise1);
+			obtain_images(material1.noise1, material1);
+			material1.noise1.set_render_on_apply(true);
 	    var preset1 = new jsmanip.Preset() ;
 			preset1.brightness1 = new jsmanip.Brightness(
 		0.200000003,preset1);		
@@ -247,16 +247,25 @@ plane2.manager = manager;
             plane2.position.x = 170;
             plane2.position.y = -200;
             set_rotation_x(plane2.rotation, 90);
-	application.events.addListener("click", function()
+	application.events.addListener("update", function()
 	{    
-	}
-	);
-	application.events.addListener("init", function()
-	{    
-	}
-	);
-	application.events.addListener("keydown", function(keycode)
-	{    
+		if (host.needs_update)
+{
+img1.contrast2.set_amount(host.contrast_amount);
+if (image0)
+{
+image0.rgb1.set_red(host.rgb_red);
+image0.rgb1.set_green(host.rgb_green);
+image0.rgb1.set_blue(host.rgb_blue);
+}
+plane1.emboss1.set_height(host.emboss_height);
+plane1.emboss1.set_angle(host.emboss_angle);
+plane1.emboss1.set_elevation(host.emboss_elevation);
+material1.noise1.set_amount(host.anoise_amount);
+material1.noise1.set_density(host.anoise_density);
+material1.noise1.mono = host.anoise_mono;
+host.needs_update = false;
+}
 	}
 	);
 if(ui_)
@@ -336,7 +345,7 @@ manager.events.addListener("update", function(g_delta, g_elapsed)
 	application.events.dispatch("update", [g_delta, g_elapsed]);
 });
 application.events.dispatch("init", []);
-document.body.appendChild( renderer.domElement );
+		document.body.appendChild( renderer.domElement );
 animate();
 });
 function animate() {
