--- a/xss/production/test/cube_ui.html
+++ b/xss/production/test/cube_ui.html
@@ -229,7 +229,7 @@ manager.events.addListener("t_mousedown", function(x, y, texture)
 			if(texture.image == sounds)
 				sounds_ui.mousedown(x*200, y*200);
 	});
-		    r2 = new ui.Rectangle(sounds_g_ui_root.manager, sounds_g_ui_root, "lightblue", null, null);
+		    r2 = new ui.Rectangle(sounds_g_ui_root.manager, sounds_g_ui_root, "beige", null, null);
 		    applause = new ui.Image(sounds_g_ui_root.manager, sounds_g_ui_root, "images/1327189824_users.png");
 		    shutter = new ui.Image(sounds_g_ui_root.manager, sounds_g_ui_root, "images/1327189922_photo-camera.png");
 			    materials = new Array() ;
