--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -17,6 +17,8 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+var app_width = 600;
+var app_height = 400;
 application.events = new ev.EventHolder();
 var SoundUtils = new ui.SoundUtils();
 		var streamer = new stream.Streamer();	
