--- a/xss/production/test/jquery3.html
+++ b/xss/production/test/jquery3.html
@@ -2,52 +2,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>Testing layout</title>
+	<title>Testing components</title>
             <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
             <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
             <script type="text/javascript" src="../js/jquery-idiom.js"></script>
             <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css"></link>
+            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+            <script type="text/javascript" src="../js/jquery.ui.map.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
         var application = {};
-			var main = $("#main");
-			var tc1 = $("#tc1");
-			var local = $("#local");
-			var remote = $("#remote");
-			var __img1 = $("#__img1");
-            tc1.tabs({
-                collapsible: true,
+			var myMap = $("#myMap");
+            myMap.gmap({
+                center: "57.7973333,12.0502107",
+                zoom: 10,
+                disableDefaultUI: true,
             });
-					__img1.attr("src", "images/img1.png");
                     if (application.init)
                         application.init();
                 		});
 	</script>
 	<style>
-#main {width : 600px;height : 400px}
-#tc1 {width : 400px}
-#__img1 {display : block;margin-left : auto;margin-right : auto}
+#myMap {left : 100px;top : 10px;width : 300px;height : 300px}
     </style>
 </head>
 <body>
-<div id="main">
-            <table border="0"  width = "600"  height = "400" >
-        <tr><td  width = "400px"   style="vertical-align:top">
-<div id="tc1">
-		<ul>
-			<li><a href="#local"><span>Components</span></a></li>
-			<li><a href="somepage.html"><span>Some Page</span></a></li>
-		</ul>
-<div id="local">
-</div>
-</div>
-</td><td style="vertical-align:middle">
-				<img id="__img1"
-						src="images/img1.png" 
-					>
-				</img>
-</td></tr>
-            </table>
-        </div>
+				<div id="myMap"
+			>
+				</div>
 </body>
 </html>
