more fix on jbox2d idiom with mouseJoint implemented and yet stay some funny jump when physic body is moved :(

--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -89,7 +89,7 @@ cube1_material.manager = manager;
 		    new THREE.PerspectiveCamera(50, 1.5, 1, 10000, null) ;				
 camera_2.manager = manager;
 	    light = 
-	    new THREE.DirectionalLight(16777215, null, null, null) ;
+	    new THREE.DirectionalLight(16777215, 1, 0, null) ;
 	    manager.scene.add(light);
 light.manager = manager;
 	    sphere_1_sphere = new THREE.SphereGeometry(20, 32, 16) ;
