--- a/xss/production/test/3js_materials.html
+++ b/xss/production/test/3js_materials.html
@@ -155,7 +155,7 @@ camera_1.manager = manager;
 	    manager.scene.add(amb_light_1);
 amb_light_1.manager = manager;
 	    dir_light_1 = 
-	    new THREE.DirectionalLight(Math.random() * 0xffffff, 1, null, null) ;
+	    new THREE.DirectionalLight(Math.random() * 0xffffff, 1, 0, null) ;
 	    manager.scene.add(dir_light_1);
 dir_light_1.manager = manager;
 			particle_1 = new THREE.Particle( 
