--- a/xss/production/test/jquery9.html
+++ b/xss/production/test/jquery9.html
@@ -168,7 +168,7 @@ ripple1.disturb(x, y);
                 rain.start();
         var ____h1 = new state.Every(1, function(t)
         {
-        rain.();
+        rain.drop();
         });
         rain.addHandler(____h1);	                    
             ripple1.set_width(744);
