--- a/xss/production/test/ui_ripple.html
+++ b/xss/production/test/ui_ripple.html
@@ -120,9 +120,11 @@ ripple1.disturb(x, y);
                 rain.start();
         var ____h1 = new state.Every(1, function(t)
         {
-                rain.drop();
+        rain.drop();
         });
         rain.addHandler(____h1);	                    
+            ripple1.set_width(744);
+            ripple1.set_height(370);
             ripple1.set_placement("client");
 			document.onkeydown = function(ev)
 			{
